// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breakout content resizes the column 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__autoSize": false,
        "isNumberColumnEnabled": false,
        "layout": "default",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  416,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  264,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  416,
                ],
                "defaultMarks": null,
                "rowspan": 2,
              },
              "content": Array [
                Object {
                  "attrs": Object {
                    "extensionKey": "block-layout-eh",
                    "extensionType": "com.atlassian.confluence.macro.core",
                    "layout": "default",
                    "parameters": Object {
                      "style": Object {
                        "minWidth": 400,
                      },
                    },
                    "text": "Minimum width block extension demo",
                  },
                  "type": "extension",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  264,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  264,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  416,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  264,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`Breakout content resizes the column on a non resized table 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__autoSize": false,
        "isNumberColumnEnabled": false,
        "layout": "default",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  416,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  263,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  416,
                ],
                "defaultMarks": null,
                "rowspan": 2,
              },
              "content": Array [
                Object {
                  "attrs": Object {
                    "extensionKey": "block-layout-eh",
                    "extensionType": "com.atlassian.confluence.macro.core",
                    "layout": "default",
                    "parameters": Object {
                      "style": Object {
                        "minWidth": 400,
                      },
                    },
                    "text": "Minimum width block extension demo",
                  },
                  "type": "extension",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  263,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  263,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  416,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  263,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`Can resize normally on a full width table with content 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__autoSize": false,
        "isNumberColumnEnabled": true,
        "layout": "full-width",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  769,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "Steps to reproduce and screenshots",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  989,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "Priority",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  769,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "Possible to create a blank link",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
                Object {
                  "content": Array [
                    Object {
                      "text": "Steps to reproduce:",
                      "type": "text",
                    },
                    Object {
                      "type": "hardBreak",
                    },
                    Object {
                      "text": "1. Use markdown for a URL",
                      "type": "text",
                    },
                    Object {
                      "type": "hardBreak",
                    },
                    Object {
                      "text": "2. Paste a jira link in for the href and immediately close the bracket to complete the markdown",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
                Object {
                  "content": Array [
                    Object {
                      "text": "Expected behaviour",
                      "type": "text",
                    },
                    Object {
                      "type": "hardBreak",
                    },
                    Object {
                      "text": "markdown for URL works correctly? or smartcard overrides it?",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
                Object {
                  "content": Array [
                    Object {
                      "text": "Actual behaviour",
                      "type": "text",
                    },
                    Object {
                      "type": "hardBreak",
                    },
                    Object {
                      "text": "Smartcard link for Jira is still being processed and is entered as the value for the markdown for the URL ",
                      "type": "text",
                    },
                    Object {
                      "attrs": Object {
                        "id": "atlassian-question_mark",
                        "shortName": ":question:",
                        "text": ":question:",
                      },
                      "type": "emoji",
                    },
                    Object {
                      "type": "hardBreak",
                    },
                    Object {
                      "text": "URL ends up pointing to the confluence edit link but without a page ID so 404s",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  989,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "Papercut",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  769,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "Publishing somewhat big pages doesn't really provide any indication to the user that their page is actually being published and they're going to be navigated away",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  989,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "Papercut",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`Can resize normally with a rowspan and colspan 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__autoSize": false,
        "isNumberColumnEnabled": false,
        "layout": "default",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  79,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 2,
                "colwidth": Array [
                  422,
                  178,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 3,
                "colwidth": Array [
                  79,
                  422,
                  178,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  79,
                ],
                "defaultMarks": null,
                "rowspan": 2,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  422,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  178,
                ],
                "defaultMarks": null,
                "rowspan": 2,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  422,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`Can resize normally with a rowspan in the non last column. 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__autoSize": false,
        "isNumberColumnEnabled": false,
        "layout": "default",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  198,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  482,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  198,
                ],
                "defaultMarks": null,
                "rowspan": 2,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  482,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  482,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  198,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  482,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`Can resize the last column when table is nested in Columns 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "width": 50,
          },
          "content": Array [
            Object {
              "attrs": Object {
                "__autoSize": false,
                "isNumberColumnEnabled": false,
                "layout": "default",
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "attrs": Object {
                        "background": null,
                        "colspan": 1,
                        "colwidth": Array [
                          141,
                        ],
                        "defaultMarks": null,
                        "rowspan": 1,
                      },
                      "content": Array [
                        Object {
                          "type": "paragraph",
                        },
                      ],
                      "type": "tableHeader",
                    },
                    Object {
                      "attrs": Object {
                        "background": null,
                        "colspan": 1,
                        "colwidth": Array [
                          106,
                        ],
                        "defaultMarks": null,
                        "rowspan": 1,
                      },
                      "content": Array [
                        Object {
                          "type": "paragraph",
                        },
                      ],
                      "type": "tableHeader",
                    },
                    Object {
                      "attrs": Object {
                        "background": null,
                        "colspan": 1,
                        "colwidth": Array [
                          75,
                        ],
                        "defaultMarks": null,
                        "rowspan": 1,
                      },
                      "content": Array [
                        Object {
                          "type": "paragraph",
                        },
                      ],
                      "type": "tableHeader",
                    },
                  ],
                  "type": "tableRow",
                },
                Object {
                  "content": Array [
                    Object {
                      "attrs": Object {
                        "background": null,
                        "colspan": 1,
                        "colwidth": Array [
                          141,
                        ],
                        "defaultMarks": null,
                        "rowspan": 1,
                      },
                      "content": Array [
                        Object {
                          "type": "paragraph",
                        },
                      ],
                      "type": "tableCell",
                    },
                    Object {
                      "attrs": Object {
                        "background": null,
                        "colspan": 1,
                        "colwidth": Array [
                          106,
                        ],
                        "defaultMarks": null,
                        "rowspan": 1,
                      },
                      "content": Array [
                        Object {
                          "type": "paragraph",
                        },
                      ],
                      "type": "tableCell",
                    },
                    Object {
                      "attrs": Object {
                        "background": null,
                        "colspan": 1,
                        "colwidth": Array [
                          75,
                        ],
                        "defaultMarks": null,
                        "rowspan": 1,
                      },
                      "content": Array [
                        Object {
                          "type": "paragraph",
                        },
                      ],
                      "type": "tableCell",
                    },
                  ],
                  "type": "tableRow",
                },
                Object {
                  "content": Array [
                    Object {
                      "attrs": Object {
                        "background": null,
                        "colspan": 1,
                        "colwidth": Array [
                          141,
                        ],
                        "defaultMarks": null,
                        "rowspan": 1,
                      },
                      "content": Array [
                        Object {
                          "type": "paragraph",
                        },
                      ],
                      "type": "tableCell",
                    },
                    Object {
                      "attrs": Object {
                        "background": null,
                        "colspan": 1,
                        "colwidth": Array [
                          106,
                        ],
                        "defaultMarks": null,
                        "rowspan": 1,
                      },
                      "content": Array [
                        Object {
                          "type": "paragraph",
                        },
                      ],
                      "type": "tableCell",
                    },
                    Object {
                      "attrs": Object {
                        "background": null,
                        "colspan": 1,
                        "colwidth": Array [
                          75,
                        ],
                        "defaultMarks": null,
                        "rowspan": 1,
                      },
                      "content": Array [
                        Object {
                          "type": "paragraph",
                        },
                      ],
                      "type": "tableCell",
                    },
                  ],
                  "type": "tableRow",
                },
              ],
              "type": "table",
            },
          ],
          "type": "layoutColumn",
        },
        Object {
          "attrs": Object {
            "width": 50,
          },
          "content": Array [
            Object {
              "type": "paragraph",
            },
          ],
          "type": "layoutColumn",
        },
      ],
      "type": "layoutSection",
    },
  ],
  "type": "doc",
}
`;

exports[`Can't resize the last column of a table with dynamic sizing enabled. 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__autoSize": false,
        "isNumberColumnEnabled": false,
        "layout": "default",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  166,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  594,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  166,
                ],
                "defaultMarks": null,
                "rowspan": 2,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  594,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  594,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  166,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  594,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`Created column should be set to 140px 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__autoSize": false,
        "isNumberColumnEnabled": false,
        "layout": "default",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  48,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  140,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  48,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  48,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  396,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  48,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  140,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  48,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  48,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  396,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  48,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  140,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  48,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  48,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  396,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
}
`;

exports[`Table column should resize when an extension changes it's width 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__autoSize": false,
        "isNumberColumnEnabled": false,
        "layout": "default",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  301,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "attrs": Object {
                    "extensionKey": "block-async-eh",
                    "extensionType": "com.atlassian.confluence.macro.core",
                    "layout": "default",
                    "parameters": Object {
                      "macroMetadata": Object {
                        "placeholder": Array [
                          Object {
                            "data": Object {
                              "url": "",
                            },
                            "type": "icon",
                          },
                        ],
                      },
                      "macroParams": Object {},
                    },
                    "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
                  },
                  "type": "extension",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  151,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  227,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  301,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  151,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  227,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  301,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  151,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": Array [
                  227,
                ],
                "defaultMarks": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
}
`;
